# lgpd-rest-prototipo

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml  example_request.json  pg_hba.conf  postgresql.conf  pyproject.toml
migrations/: 20250101_create_pessoas.sql  20251102183254_create_pessoas_juridicas.sql  20251102183338_create_permissao.sql
src/: api_doc.rs  auth.py  db.py  db.rs  main.py  main.rs  models.py
src/endpoints/: __init__.py  pessoa_fisica.py  pessoa_juridica.py
src/handlers/: mod.rs
src/models/: mod.rs
