[package]
name = "lgpd-rest-prototipo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

